--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact List</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         table {
             width: 100%;
@@ -22,6 +24,11 @@
 </head>
 <body>
     <h2>Add New Contact</h2>
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addContactModal">
+        Add New Contact
+    </button>
+
     <h2>Contact List</h2>
     <table id="contactTable">
         <thead>
@@ -30,6 +37,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Phone Number</th>
+                <th>Gender</th>
                 <th>Email</th>
                 <th>Country</th>
                 <th>City</th>
@@ -39,46 +47,157 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Podaci će biti prikazani ovde -->
         </tbody>
     </table>
 
+    <!-- Modal for adding new contact -->
+    <div class="modal" id="addContactModal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">Add New Contact</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+
+                <!-- Modal Body -->
+                <div class="modal-body">
+                    <form id="contactForm">
+                        <div class="form-group">
+                            <label for="firstName">First Name:</label>
+                            <input type="text" class="form-control" id="firstName" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastName">Last Name:</label>
+                            <input type="text" class="form-control" id="lastName" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="phoneNumber">Phone Number:</label>
+                            <input type="text" class="form-control" id="phoneNumber" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="gender">Gender:</label>
+                            <select class="form-control" id="gender" required>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="country">Country:</label>
+                            <select class="form-control" id="country" required onchange="fetchCitiesForCountry()">
+                                <option value="">Select a Country</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="city">City:</label>
+                            <select class="form-control" id="city" required>
+                                <option value="">Select a City</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="birthDate">Birth Date:</label>
+                            <input type="date" class="form-control" id="birthDate" required>
+                        </div>
+                    </form>
+                </div>
+
+                <!-- Modal Footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-success" onclick="saveContact()">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- jQuery, Popper.js, and Bootstrap JS (make sure these are in this order) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script>
-        // Funkcija za dohvatanje podataka i prikazivanje u tabeli
         async function fetchContacts() {
             try {
                 const response = await fetch('http://localhost:5293/api/contact/all');
-                const contacts = await response.json(); // Pretvori odgovor u JSON
+                const contacts = await response.json();
 
                 const tableBody = document.getElementById("contactTable").getElementsByTagName("tbody")[0];
-                tableBody.innerHTML = ''; // Očisti tabelu pre nego što dodamo nove podatke
+                tableBody.innerHTML = '';
 
-                // Dodaj svaki kontakt u tabelu
                 contacts.forEach(contact => {
                     const row = tableBody.insertRow();
                     row.innerHTML = `
-                        <td>${contact.id}</td>
-                        <td>${contact.firstName}</td>
-                        <td>${contact.lastName}</td>
-                        <td>${contact.phoneNumber}</td>
-                        <td>${contact.email}</td>
-                        <td>${contact.countryName}</td>
-                        <td>${contact.cityName}</td>
-                        <td>${contact.birthDate}</td>
-                        <td>${contact.age}</td>
-                        <td>
-                            <button onclick="editContact(${contact.id})">Edit</button>
-                            <button onclick="deleteContact(${contact.id})">Delete</button>
-                        </td>
-                        `;
+                            <td>${contact.id}</td>
+                            <td>${contact.firstName}</td>
+                            <td>${contact.lastName}</td>
+                            <td>${contact.phoneNumber}</td>
+                            <td>${contact.gender}</td>
+                            <td>${contact.email}</td>
+                            <td>${contact.countryName}</td>
+                            <td>${contact.cityName}</td>
+                            <td>${contact.birthDate}</td>
+                            <td>${contact.age}</td>
+                            <td>
+                                <button onclick="editContact(${contact.id})">Edit</button>
+                                <button onclick="deleteContact(${contact.id})">Delete</button>
+                            </td>
+                            `;
                 });
             } catch (error) {
                 console.error("Error fetching contacts:", error);
             }
         }
 
-        // Pozovi funkciju prilikom učitavanja stranice
-        window.onload = fetchContacts;
+        async function fetchCountries() {
+            try {
+                const response = await fetch('http://localhost:5293/api/country/all-countries');
+                const countries = await response.json();
+                const countrySelect = document.getElementById('country');
+                countrySelect.innerHTML = '<option value="">Select a Country</option>';
+
+                countries.forEach(country => {
+                    const option = document.createElement('option');
+                    option.value = country.countryId;
+                    option.textContent = country.countryName;
+                    countrySelect.appendChild(option);
+                });
+            } catch (error) {
+                console.error("Error fetching countries:", error);
+            }
+        }
+
+        async function fetchCitiesForCountry() {
+            const countryId = document.getElementById('country').value;
+
+            if (!countryId) {
+                return;
+            }
+
+            try {
+                const response = await fetch(`http://localhost:5293/api/city/cities-for-country/${countryId}`);
+                const cities = await response.json();
+                const citySelect = document.getElementById('city');
+                citySelect.innerHTML = '<option value="">Select a City</option>';
+
+                cities.forEach(city => {
+                    const option = document.createElement('option');
+                    option.value = city.cityId;
+                    option.textContent = city.cityName;
+                    citySelect.appendChild(option);
+                });
+            } catch (error) {
+                console.error("Error fetching cities:", error);
+            }
+        }
+
+        window.onload = () => {
+            fetchContacts();
+            fetchCountries();
+        };
     </script>
 </body>
 </html>
