--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,204 +6,7 @@
     <title>Contact List</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-
-        /* Style for the "Add New Contact" Section */
-        h2 {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 20px;
-            color: #333;
-            font-family: 'Arial', sans-serif;
-        }
-
-        /* Style for the "Add New Contact" button */
-        button.btn-primary {
-            padding: 10px 20px;
-            font-size: 16px;
-            color: white;
-            background-color: #4CAF50;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-            margin-bottom: 20px; /* Space below the button */
-        }
-
-            button.btn-primary:hover {
-                background-color: #45a049;
-            }
-
-            button.btn-primary:active {
-                background-color: #388e3c;
-            }
-
-        /* Remove default button outline on focus */
-        button:focus {
-            outline: none;
-        }
-
-        /* General Table Styles */
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin: 20px 0;
-            font-family: Arial, sans-serif;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        table, th, td {
-            border: 1px solid #ddd;
-        }
-
-        th, td {
-            padding: 12px;
-            text-align: left;
-        }
-
-        /* Table Header Styling */
-        th {
-            background-color: #4CAF50;
-            color: white;
-            font-weight: bold;
-        }
-
-        /* Gender Circle Styling */
-        .gender-circle {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-        }
-
-        /* Table Row Styling */
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        tr:hover {
-            background-color: #ddd;
-        }
-
-        /* Button Styling */
-        button {
-            padding: 8px 12px;
-            font-size: 14px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-            /* Edit Button (Green) */
-            button:hover {
-                background-color: #45a049;
-            }
-
-            button:active {
-                background-color: #388e3c;
-            }
-
-            button.edit-btn {
-                background-color: #4CAF50;
-                color: white;
-            }
-
-                button.edit-btn:hover {
-                    background-color: #45a049;
-                }
-
-            /* Delete Button (Red) */
-            button.delete-btn {
-                background-color: #f44336;
-                color: white;
-            }
-
-                button.delete-btn:hover {
-                    background-color: #e53935;
-                }
-
-            /* Remove the default button outline on focus */
-            button:focus {
-                outline: none;
-            }
-
-        /* Delete Modal Styles */
-        #deleteModal {
-            display: none; /* Hide modal by default */
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            overflow: auto;
-            padding-top: 50px;
-        }
-
-            #deleteModal .modal-content {
-                background-color: #fefefe;
-                margin: 5% auto;
-                padding: 20px;
-                border: 1px solid #888;
-                width: 50%;
-                border-radius: 10px;
-                text-align: center;
-            }
-
-            #deleteModal h3 {
-                font-size: 24px;
-                color: #333;
-            }
-
-            #deleteModal #contactName,
-            #deleteModal #contactPhoneNumber {
-                font-size: 18px;
-                color: #555;
-                margin: 10px 0;
-            }
-
-            #deleteModal button {
-                background-color: #4CAF50;
-                color: white;
-                padding: 10px 20px;
-                font-size: 16px;
-                border: none;
-                border-radius: 5px;
-                cursor: pointer;
-                margin: 10px 5px;
-            }
-
-                #deleteModal button:hover {
-                    background-color: #45a049;
-                }
-
-            #deleteModal #confirmDeleteBtn {
-                background-color: #d9534f;
-            }
-
-                #deleteModal #confirmDeleteBtn:hover {
-                    background-color: #c9302c;
-                }
-
-            #deleteModal .close {
-                color: #aaa;
-                font-size: 28px;
-                font-weight: bold;
-                position: absolute;
-                right: 20px;
-                top: 10px;
-                cursor: pointer;
-            }
-
-                #deleteModal .close:hover,
-                #deleteModal .close:focus {
-                    color: black;
-                    text-decoration: none;
-                    cursor: pointer;
-                }
-    </style>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
     <h2>Address Book</h2>
@@ -313,100 +116,13 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="js/edit.js"></script>
+    <script src="js/fetch.js"></script>
+    <script src="js/delete.js"></script>
 
     <script>
         let currentContactId = null;
-
-        async function fetchContacts() {
-            try {
-                const response = await fetch('http://localhost:5293/api/contact/all');
-                const contacts = await response.json();
-
-                const tableBody = document.getElementById("contactTable").getElementsByTagName("tbody")[0];
-                tableBody.innerHTML = '';
-
-                contacts.forEach(contact => {
-                    const row = tableBody.insertRow();
-                    row.innerHTML = `
-                                <td>${contact.id}</td>
-                                <td>${contact.firstName}</td>
-                                <td>${contact.lastName}</td>
-                                <td>${contact.phoneNumber}</td>
-                                <td>
-                                    <span class="gender-circle"
-                                          style="background-color: ${contact.gender === 'Male' ? 'blue' : 'red'};">
-                                    </span>
-                                </td>
-                                <td>${contact.email}</td>
-                                <td>${contact.countryName}</td>
-                                <td>${contact.cityName}</td>
-                                <td>${contact.birthDate}</td>
-                                <td>${contact.age}</td>
-                                <td>
-                                    <button class="edit-btn" onclick="editContact(${contact.id})">Edit</button>
-                                    <button class="delete-btn" onclick="showDeleteModal(${contact.id}, '${contact.firstName}', '${contact.lastName}', '${contact.phoneNumber}')">Delete</button>
-                                </td>
-                        `;
-                });
-            } catch (error) {
-                console.error("Error fetching contacts:", error);
-            }
-        }
-
-        async function fetchCountries() {
-            try {
-                const response = await fetch('http://localhost:5293/api/country/all-countries');
-                const countries = await response.json();
-                const countrySelect = document.getElementById('country');
-                countrySelect.innerHTML = '<option value="">Select a Country</option>';
-
-                countries.forEach(country => {
-                    const option = document.createElement('option');
-                    option.value = country.countryId;
-                    option.textContent = country.countryName;
-                    countrySelect.appendChild(option);
-                });
-            } catch (error) {
-                console.error("Error fetching countries:", error);
-            }
-        }
-
-        async function fetchCitiesForCountry(selectedCityId = null) {
-            const countryId = document.getElementById('country').value;
-
-            if (!countryId) {
-                return;
-            }
-
-            try {
-                const response = await fetch(`http://localhost:5293/api/city/cities-for-country/${countryId}`);
-                const cities = await response.json();
-                const citySelect = document.getElementById('city');
-                citySelect.innerHTML = '<option value="">Select a City</option>';
-
-                cities.forEach(city => {
-                    const option = document.createElement('option');
-                    option.value = city.cityId;
-                    option.textContent = city.cityName;
-                    citySelect.appendChild(option);
-                });
-
-                if (selectedCityId) {
-                    document.getElementById("city").value = selectedCityId;
-                }
-
-            } catch (error) {
-                console.error("Error fetching cities:", error);
-            }
-        }
-
-        function resetContactForm() {
-            document.getElementById("contactForm").reset();
-        }
-        $('#addContactModal').on('hidden.bs.modal', function () {
-            resetContactForm();
-        });
-
+        let contactIdToDelete = null;
         document.getElementById("phoneNumber").addEventListener("input", function (event) {
             let value = event.target.value.replace(/\D/g, "");
 
@@ -420,120 +136,6 @@
 
             event.target.value = value;
         });
-
-        function saveContact() {
-            const newContact = {
-                firstName: document.getElementById("firstName").value,
-                lastName: document.getElementById("lastName").value,
-                phoneNumber: document.getElementById("phoneNumber").value,
-                gender: document.getElementById("gender").value === "Male" ? 0 : 1,
-                emailAddress: document.getElementById("email").value,
-                cityId: parseInt(document.getElementById("city").value),
-                birthDate: document.getElementById("birthDate").value
-            };
-            
-
-            if (!newContact.firstName || !newContact.lastName || !newContact.phoneNumber || !newContact.emailAddress || !newContact.cityId || !newContact.birthDate) {
-                alert("All fields are required.");
-                return;
-            }
-
-            let requestUrl = 'http://localhost:5293/api/contact/create';
-            let method = 'POST';
-
-            console.log(currentContactId);
-            if (currentContactId != null) {
-                newContact.contactId = currentContactId;
-                requestUrl = `http://localhost:5293/api/contact/update`;
-                method = 'PATCH';
-            }
-
-            console.log(requestUrl);
-
-            fetch(requestUrl, {
-                method: method,
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(newContact)
-            })
-                .then(response => {
-                    if (!response.ok) {
-                        return response.json().then(errorData => {
-                            alert("Error: " + (errorData.message || errorData.errors || "Unknown error"));
-                            throw new Error("Request failed");
-                        });
-                    }
-                })
-                .then(data => {
-                    const successMessage = currentContactId != null ? "Contact updated successfully." : "Contact created successfully.";
-                    alert(successMessage);
-                    $('#addContactModal').modal('hide');
-                    fetchContacts();
-                    currentContactId = null;
-                })
-        }
-
-        let contactIdToDelete = null;
-
-        function showDeleteModal(contactId, firstName, lastName, phoneNumber) {
-            document.getElementById("contactName").innerText = `Name: ${firstName} ${lastName}`;
-            document.getElementById("contactPhoneNumber").innerText = `Phone: ${phoneNumber}`;
-
-            contactIdToDelete = contactId;
-
-            document.getElementById("deleteModal").style.display = "block";
-        }
-
-        function closeModal() {
-            document.getElementById("deleteModal").style.display = "none";
-        }
-
-        async function confirmDelete() {
-            if (contactIdToDelete !== null) {
-                await deleteContact(contactIdToDelete);
-            }
-            closeModal();
-        }
-
-        async function deleteContact(contactId) {
-            try {
-                const response = await fetch(`http://localhost:5293/api/contact/${contactId}`, {
-                    method: 'DELETE',
-                });
-
-                if (!response.ok) {
-                    alert('Failed to delete contact.');
-                    return;
-                }
-
-                alert('Contact deleted successfully.');
-                fetchContacts();
-            } catch (error) {
-                console.error("Error deleting contact:", error);
-            }
-        }
-
-        function editContact(contactId) {
-            currentContactId = contactId;
-            fetch(`http://localhost:5293/api/contact/${contactId}`)
-                .then(response => response.json())
-                .then(contact => {
-                    document.getElementById("firstName").value = contact.firstName;
-                    document.getElementById("lastName").value = contact.lastName;
-                    document.getElementById("phoneNumber").value = contact.phoneNumber;
-                    document.getElementById("gender").value = contact.gender;
-                    document.getElementById("email").value = contact.email;
-                    document.getElementById("country").value = contact.countryId;
-                    fetchCitiesForCountry(contact.cityId);
-                    document.getElementById("birthDate").value = contact.birthDate.split('T')[0];
-
-                    $('#addContactModal').modal('show');
-                })
-                .catch(error => {
-                    console.error("Error fetching contact details:", error);
-                });
-        }
 
         window.onload = () => {
             fetchContacts();
